2003-05-15  Seth Woolley <seth@tautology.org>

		Modified PRE_BUILD to add unpack for SOURCE

2003-05-14  Seth Woolley <seth@tautology.org>

		Modified DETAILS to fix md5 for SOURCE.

2003-04-19  Seth Woolley <seth@tautology.org>

		Modified DETAILS to fix md5 for SOURCE.

2003-04-18  Seth Woolley <seth@tautology.org>

		Modified DETAILS to fix md5 for SOURCE[0].

2003-04-01  Eric Sandall <eric@sandall.us>

		Added information about joining the Source
		Mage SETI@Home team.  :)

2003-03-31  Eric Sandall <eric@sandall.us>

		Added init script using sorcery's init.d installer

		Now asks if you want to reconfigure, so it no longer
		stops installs

		If you SPELL_CONFIG is found, defaults to i386

2003-03-05  Eric Sandall <eric@sandall.us>

		Fixed Bug #2031

		Modified setiathome and xsetiathome to pass any variables
		sent to them to the actual binaries

		Now only tries to install xsetiathome if it is included in
		the package, as some (SPARC) do not have an xsetiathome

2002-09-19  Eric Sandall <eric@sandall.us>

		Created spell