@@ -7,7 +7,7 @@ SOURCE_DIRECTORY=${BUILD_DIRECTORY}/${SPELL}-${VERSION}.${ARK:-i686-pc-linux-gnu
           MD5[0]=${PREPARE_MD5:-01d05178bd22c36b2e411dd12f23661a}
         WEB_SITE=http://setiathome.ssl.berkeley.edu/
          ENTERED=20020919
-         UPDATED=20030501
+         UPDATED=20030909
       LICENSE[0]=UNKOWN
       MAINTAINER=eric@sandall.us
            SHORT="SETI@Home, search for E.T. in your own home"
