@@ -1,0 +1,8 @@
+#!/bin/sh
+
+PROGRAM=/usr/bin/setiathome
+RUNLEVEL=3
+ARGS="-nice 19 -graphics"
+NEEDS="+local_fs +network"
+
+. /etc/init.d/smgl_init
